[package]
name = "rfalse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
console_log = "1.0.0"
log = "0.4.21"
console_error_panic_hook = "0.1.7"

[lib]
path = "src/wasm.rs"
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
lto = true
#debug = false
#rpath = false
